Primer prototipo de combate

--- a/Kenshi-DnD/MainWindow.xaml
+++ b/Kenshi-DnD/MainWindow.xaml
@@ -37,7 +37,7 @@
             ></Label>
         <Button
             Grid.Column="1" Grid.Row="4"
-            Click="CombatPlay"
+            Click="NextTurnTest"
             Content="Avanzar jugada"
             >
         </Button>
