--- a/Kenshi-DnD/MainWindow.xaml
+++ b/Kenshi-DnD/MainWindow.xaml
@@ -38,7 +38,7 @@
             ></Label>
         <Button
             Grid.Column="1" Grid.Row="4"
-            Click="NextTurnTest"
+            Click="TestRemoveItem"
             Content="Avanzar jugada"
             >
         </Button>
