Progreso en adición de inventario a Héroe y reestructuracion de SelectedTreeView

--- a/Kenshi-DnD/MainWindow.xaml
+++ b/Kenshi-DnD/MainWindow.xaml
@@ -38,7 +38,7 @@
             ></Label>
         <Button
             Grid.Column="1" Grid.Row="4"
-            Click="TestRemoveItem"
+            Click="UseItem"
             Content="Avanzar jugada"
             >
         </Button>
