--- a/Kenshi-DnD/MainWindow.xaml
+++ b/Kenshi-DnD/MainWindow.xaml
@@ -22,15 +22,24 @@
         </Grid.RowDefinitions>
 
         <Label 
-            Grid.Column="1" Grid.Row="0"
+            Grid.Column="0" Grid.Row="0"
             Content="Combate:"></Label>
         <Label 
-            Grid.Column="1" Grid.Row="1"
-            x:Name="HeroTest" Content="---"></Label>
-        <Label
-            Grid.Column="1" Grid.Row="2"
-            x:Name="MonsterTest"
-            Content="---"></Label>
+            Grid.Column="0" Grid.Row="1"
+            x:Name="HeroTest" Content="Héroes"></Label>
+        <Label 
+            Grid.Column="2" Grid.Row="1"
+            x:Name="MonsterTest" Content="Enemigos" HorizontalAlignment="Right"></Label>
+        <Grid
+            Grid.Column="0" Grid.Row="2" Grid.RowSpan="2"
+            x:Name="AllHeroes">
+
+        </Grid>
+        <Grid
+            Grid.Column="2" Grid.Row="2" Grid.RowSpan="2"
+            x:Name="AllMonsters">
+            
+        </Grid>
         <Label
             Grid.Column="1" Grid.Row="3"
             x:Name="CombatTest"
@@ -38,13 +47,13 @@
             ></Label>
         <Button
             Grid.Column="1" Grid.Row="4"
-            Click="UseItem"
+            Click="NextTurnTest"
             Content="Avanzar jugada"
             >
         </Button>
-        <TreeView Grid.Column="0" Grid.Row="6" x:Name="SelectedItemsGrid">
+        <TreeView Grid.Column="0" Grid.Row="6" x:Name="HeroItems">
         </TreeView>
-        <TreeView Grid.Column="2" Grid.Row="6" x:Name="UnSelectedItemsGrid">
+        <TreeView Grid.Column="2" Grid.Row="6" x:Name="UnselectedItems">
         </TreeView>
     </Grid>
 </Window>
