--- a/Kenshi-DnD/MainWindow.xaml
+++ b/Kenshi-DnD/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kenshi_DnD"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="800" Width="1200">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -24,6 +24,10 @@
         <Label 
             Grid.Column="0" Grid.Row="0"
             Content="Combate:"></Label>
+        <Label
+            Grid.Column="1" Grid.Row="0"
+            x:Name="TimerUI"
+            ></Label>
         <Label 
             Grid.Column="0" Grid.Row="1"
             x:Name="HeroTest" Content="Héroes"></Label>
