--- a/Kenshi-DnD/CombatWindow.xaml
+++ b/Kenshi-DnD/CombatWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Kenshi_DnD.CombatWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Kenshi_DnD"
-        mc:Ignorable="d"
-        Title="CombatWindow" Height="750" Width="1200">
+﻿<UserControl x:Class="Kenshi_DnD.CombatWindow"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Kenshi_DnD"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"></ColumnDefinition>
@@ -13,47 +13,69 @@
             <ColumnDefinition Width="2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="3*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Label 
+        <Viewbox 
+    Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" MaxHeight="150">
+            <Grid MaxHeight="200">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <Label 
             Grid.Column="0" Grid.Row="0"
-            Content="Combate:"></Label>
-        <Label
-            Grid.Column="1" Grid.Row="0"
-            x:Name="TimerUI"
-            ></Label>
-        <Label 
+            Content="Combate:"
+            x:Name="GameStateUI"/>
+
+                <Label
+            Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"
+            x:Name="TimerUI"/>
+
+                <Label 
             Grid.Column="0" Grid.Row="1"
-            x:Name="HeroTest" Content="Héroes"></Label>
-        <Label 
+            x:Name="HeroTest" 
+            Content="Héroes"/>
+
+                <Label 
             Grid.Column="2" Grid.Row="1"
-            x:Name="MonsterTest" Content="Enemigos" HorizontalAlignment="Right"></Label>
+            x:Name="MonsterTest" 
+            Content="Enemigos" 
+            HorizontalAlignment="Right"/>
+            </Grid>
+        </Viewbox>
+
+
         <Grid
-            Grid.Column="0" Grid.Row="2" Grid.RowSpan="2"
-            x:Name="AllHeroes">
+        Grid.Column="0" Grid.Row="2" Grid.RowSpan="2"
+        x:Name="AllHeroes">
 
         </Grid>
         <Grid
-            Grid.Column="2" Grid.Row="2" Grid.RowSpan="2"
-            x:Name="AllMonsters">
+        Grid.Column="2" Grid.Row="2" Grid.RowSpan="2"
+        x:Name="AllMonsters">
 
         </Grid>
         <Label
-            Grid.Column="1" Grid.Row="3"
-            x:Name="CombatTest"
-            Content="-   -"
-            ></Label>
+        Grid.Column="1" Grid.Row="3"
+        x:Name="CombatTest"
+        Content="-   -"
+        ></Label>
         <Button
-            Grid.Column="1" Grid.Row="4"
-            Click="NextTurn"
-            Content="Avanzar jugada"
-            >
+        Grid.Column="1" Grid.Row="4"
+        Click="NextTurn"
+        Content="Avanzar jugada"
+        >
         </Button>
         <ScrollViewer Grid.Row="5" Grid.Column="1" Margin="20,5,20,5" VerticalScrollBarVisibility="Auto">
             <TextBlock x:Name="InfoLog" TextWrapping="Wrap">
@@ -64,4 +86,4 @@
         <TreeView Grid.Column="2" Grid.Row="6" x:Name="UnselectedItems">
         </TreeView>
     </Grid>
-</Window>
+</UserControl>
