--- a/Kenshi-DnD/CombatWindow.xaml
+++ b/Kenshi-DnD/CombatWindow.xaml
@@ -6,84 +6,138 @@
              xmlns:local="clr-namespace:Kenshi_DnD"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <UserControl.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Margin" Value="4"/>
+        </Style>
+        <Style TargetType="TreeViewItem">
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Margin" Value="2" />
+            
+        </Style>
+        <Style TargetType="TreeView">
+            <Setter Property="FontSize" Value="16"/>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+    </UserControl.Resources>
+
+
+    <Grid Background="#e3e4c9">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="3*"></ColumnDefinition>
             <ColumnDefinition Width="2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="3*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Viewbox 
-    Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" MaxHeight="150">
-            <Grid MaxHeight="200">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
 
-                <Label 
+        <Grid Background="#e3e4c9" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Label 
             Grid.Column="0" Grid.Row="0"
-            Content="Combate:"
-            x:Name="GameStateUI"/>
+                FontSize="20"
+            Content="En Combate"
+            x:Name="GameStateUI"
+                    />
 
-                <Label
-            Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"
+            <Label
+            Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"
             x:Name="TimerUI"/>
 
-                <Label 
+            <Label 
             Grid.Column="0" Grid.Row="1"
             x:Name="HeroTest" 
-            Content="Héroes"/>
+            Content="Héroes"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+            FontSize="32"
+                />
 
-                <Label 
+            <Label 
             Grid.Column="2" Grid.Row="1"
             x:Name="MonsterTest" 
             Content="Enemigos" 
-            HorizontalAlignment="Right"/>
-            </Grid>
-        </Viewbox>
+                FontSize="32"
+            HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                />
+        </Grid>
 
-
-        <Grid
+            <Grid
+            Background="#2c2825"
         Grid.Column="0" Grid.Row="2" Grid.RowSpan="2"
+            
         x:Name="AllHeroes">
 
         </Grid>
         <Grid
+            Background="#2c2825"
         Grid.Column="2" Grid.Row="2" Grid.RowSpan="2"
         x:Name="AllMonsters">
 
         </Grid>
-        <Label
-        Grid.Column="1" Grid.Row="3"
-        x:Name="CombatTest"
-        Content="-   -"
-        ></Label>
+        <Border
+            
+            BorderBrush="#2c2825"
+            BorderThickness="3"
+        Grid.Column="1" Grid.Row="2" Grid.RowSpan="2"
+            >
+            <Grid Background="WhiteSmoke">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+
+                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+     
+                 x:Name="CurrentCombatInfo"
+                 Content=""
+                 ></Label>
+                <Label Grid.Row="1" Grid.Column="0" x:Name="Dices"></Label>
+                
+            </Grid>
+        </Border>
+        
         <Button
         Grid.Column="1" Grid.Row="4"
         Click="NextTurn"
         Content="Avanzar jugada"
         >
         </Button>
-        <ScrollViewer Grid.Row="5" Grid.Column="1" Margin="20,5,20,5" VerticalScrollBarVisibility="Auto">
-            <TextBlock x:Name="InfoLog" TextWrapping="Wrap">
+        <Border BorderBrush="#2c2825" BorderThickness="3" Background="WhiteSmoke" Grid.Row="5" Grid.Column="1">
+            <ScrollViewer    VerticalScrollBarVisibility="Auto" >
+            <TextBlock x:Name="InfoLog" TextWrapping="Wrap" Margin="5,20,5,20" >
             </TextBlock>
-        </ScrollViewer>
-        <TreeView Grid.Column="0" Grid.Row="6" x:Name="HeroItems">
+            </ScrollViewer>
+        </Border>
+        <TreeView Grid.Column="0" Grid.Row="6" x:Name="HeroItems" Background="#e3e4c9">
         </TreeView>
-        <TreeView Grid.Column="2" Grid.Row="6" x:Name="UnselectedItems">
+        <TreeView Grid.Column="2" Grid.Row="6" x:Name="UnselectedItems" Background="#e3e4c9">
         </TreeView>
     </Grid>
 </UserControl>
