--- a/Kenshi-DnD/CombatWindow.xaml
+++ b/Kenshi-DnD/CombatWindow.xaml
@@ -41,9 +41,9 @@
 
         <Grid Background="#e3e4c9" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -57,8 +57,12 @@
             x:Name="GameStateUI"
                     />
 
+            <Grid x:Name="NextTurnGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" >
+                
+            </Grid>
+            
             <Label
-            Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"
+            Grid.Column="1" Grid.Row="1"  FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"
             x:Name="TimerUI"/>
 
             <Label 
