--- a/Kenshi-DnD/CombatWindow.xaml
+++ b/Kenshi-DnD/CombatWindow.xaml
@@ -57,7 +57,7 @@
             x:Name="GameStateUI"
                     />
 
-            <Grid x:Name="NextTurnGrid" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" >
+            <Grid x:Name="NextTurnGrid" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" >
                 
             </Grid>
             
@@ -111,7 +111,7 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
 
@@ -144,6 +144,13 @@
         Content="Avanzar jugada"
         >
         </Button>
+        <Grid x:Name="HeroStatsGrid" Grid.Column="0" Grid.Row="2">
+            
+        </Grid>
+        <Grid x:Name="TargetStatsGrid" Grid.Column="2" Grid.Row="2"> 
+        </Grid>
+
+
         <Border BorderBrush="#2c2825" BorderThickness="3" Background="WhiteSmoke" Grid.Row="3" Grid.Column="1">
             <ScrollViewer    VerticalScrollBarVisibility="Auto" >
             <TextBlock x:Name="InfoLog" TextWrapping="Wrap" Margin="5,20,5,20" FontSize="12" >
