--- a/Kenshi-DnD/CombatWindow.xaml
+++ b/Kenshi-DnD/CombatWindow.xaml
@@ -24,7 +24,19 @@
     </UserControl.Resources>
 
 
-    <Grid Background="#e3e4c9">
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="#C2B280" Offset="0.0"/>
+
+                <GradientStop Color="#A1866F" Offset="0.1"/>
+
+                <GradientStop Color="#806D5A" Offset="0.3"/>
+
+                <GradientStop Color="#4B4A47" Offset="0.4"/>
+
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"></ColumnDefinition>
             <ColumnDefinition Width="3*"></ColumnDefinition>
@@ -39,7 +51,7 @@
         </Grid.RowDefinitions>
 
 
-        <Grid Background="#e3e4c9" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
+        <Grid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="2*"/>
@@ -135,7 +147,7 @@
                     HorizontalAlignment="Center"></TextBlock>
             </Grid>
         </Border>
-        
+
         <Button
         Grid.Column="1" Grid.Row="2"
         Click="NextTurn"
@@ -144,11 +156,28 @@
         Content="Avanzar jugada"
         >
         </Button>
-        <Grid x:Name="HeroStatsGrid" Grid.Column="0" Grid.Row="2">
-            
-        </Grid>
-        <Grid x:Name="TargetStatsGrid" Grid.Column="2" Grid.Row="2"> 
-        </Grid>
+
+        <Border Grid.Column="0" Grid.Row="2" BorderBrush="Black" BorderThickness="3">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="1,0" EndPoint="0,0">
+                    <GradientStop Color="AntiqueWhite" Offset="0.2"></GradientStop>
+                    <GradientStop Color="White" Offset="1"></GradientStop>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid x:Name="HeroStatsGrid"  Margin="2" SizeChanged="UpdateFightersStatsGrid">
+            </Grid>
+        </Border>
+
+        <Border Grid.Column="2" Grid.Row="2" BorderBrush="Black" BorderThickness="3">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                    <GradientStop Color="AntiqueWhite" Offset="0.2"></GradientStop>
+                    <GradientStop Color="White" Offset="1"></GradientStop>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid x:Name="TargetStatsGrid"  Margin="2" SizeChanged="UpdateFightersStatsGrid"> 
+            </Grid>
+        </Border>
 
 
         <Border BorderBrush="#2c2825" BorderThickness="3" Background="WhiteSmoke" Grid.Row="3" Grid.Column="1">
