Añadida mecánica de pérdida de miembros y de conseguir loot y experiencia

--- a/Kenshi-DnD/CombatWindow.xaml
+++ b/Kenshi-DnD/CombatWindow.xaml
@@ -43,7 +43,7 @@
             <ColumnDefinition Width="2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="2*"></RowDefinition>
