--- a/Kenshi-DnD/Menu.xaml
+++ b/Kenshi-DnD/Menu.xaml
@@ -5,19 +5,52 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Kenshi_DnD"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="720" d:DesignWidth="1280" Background="Black">
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="/Resources/img/bonepeople.jpg" Stretch="None"></ImageBrush>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Button Grid.Column="1" Grid.Row="1" Content="Combate" Click="GoToCombat" Width="400" Height="200"></Button>
-        <TextBlock x:Name="test" Grid.Column="0" Grid.Row="0"></TextBlock>
+
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="2*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Button Content="Elige tu propia aventura" HorizontalAlignment="Center" VerticalAlignment="Center" 
+        Padding="20" Click="OpenAdventureMaker" Grid.Row="1" Grid.Column="0" Margin="10"></Button>
+            <Button Content="Cargar aventura" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="20" Margin="10" Click="OpenSavedAdventures" 
+        Grid.Row="2" Grid.Column="0"></Button>
+            <TextBlock x:Name="TitleText" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20" Grid.Row="0" Grid.Column="1"></TextBlock>
+
+        </Grid>
+
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="2*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Button Grid.Column="2" Grid.Row="1" Content="Combate" Click="GoToCombat" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="20" Margin="10"></Button>
+            <Button Grid.Column="2" Grid.Row="3" Content="Combate" Click="GoToShop" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="20" Margin="10"></Button>
+
+        </Grid>
+
+        <Border Grid.Column="1" Margin="200,50,200,50" x:Name="MenuBorder" Visibility="Collapsed">
+            <StackPanel x:Name="MenuWindow" Visibility="Collapsed">
+                
+            </StackPanel>
+            
+        </Border>
+        
     </Grid>
 </UserControl>
