--- a/Kenshi-DnD/Zone.xaml
+++ b/Kenshi-DnD/Zone.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Kenshi_DnD.Shop"
+﻿<UserControl x:Class="Kenshi_DnD.Zone"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
